syntax = "proto3";

option java_package = "feup.sdle.message";
option java_outer_classname = "DocumentRequestProto";

import "message.proto";

message DocumentRangeRequest {
  HashRange range = 1;
}

message HashRange {
  bytes start = 1;
  bytes end = 2;
}
